--- a/styles.css
+++ b/styles.css
@@ -707,6 +707,29 @@ html {
   text-shadow: 1px 1px 2px black;
 }
 
+.text-content {
+  padding: 20px;
+  background: #1a1a1a;
+  color: #fff;
+  font-family: 'Courier New', Courier, monospace;
+  overflow-y: auto;
+  height: 70%;
+}
+
+#fileContent {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.hidded {
+  display: none !important;
+}
+
+.opened {
+  display: block !important;
+}
+
+
 footer {
   width: 100%;
   position: absolute;
